update: added mochawesome json output and config fixes

--- a/package.json
+++ b/package.json
@@ -175,6 +175,10 @@
   },
   "devDependencies": {
     "cypress": "^15.7.0",
-    "cypress-selectors": "^1.0.2"
+    "cypress-mochawesome-reporter": "^4.0.2",
+    "cypress-selectors": "^1.0.2",
+    "mochawesome": "^7.1.4",
+    "mochawesome-merge": "^5.1.0",
+    "mochawesome-report-generator": "^6.3.2"
   }
 }
