--- a/.gitignore
+++ b/.gitignore
@@ -13,16 +13,5 @@ cypress/cucumberreports/
 allure-results/
 allure-report/
 
-# OS / Editor noise
-.DS_Store
+# Editor
 .vscode/settings.json
-bash: node_modules/: Is a directory
-bash: cypress/screenshots/: Is a directory
-bash: cypress/videos/: No such file or directory
-bash: cypress/cucumberreports/: Is a directory
-bash: !cypress/cucumberreports/.gitkeep: event not found
-bash: allure-results/: Is a directory
-bash: allure-report/: Is a directory
-bash: .DS_Store: command not found
-bash: Thumbs.db: command not found
-.vscode/settings.json: line 2: git.allowForcePush:: command not found
